--- a/themes/vex-hugo-modified/layouts/partials/header.html
+++ b/themes/vex-hugo-modified/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <header class="sticky-top bg-white">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="{{ site.BaseURL }}">{{ if site.Params.logo }} <img src="{{ site.Params.logo | absURL }}" alt="{{ site.Title }}" {{with site.Params.logo_width}}width="{{.}}"{{end}}> {{ else }} {{ site.Title }} {{ end }}</a>
+      <a class="navbar-brand" href="{{ site.BaseURL }}">{{ if site.Params.logo }} <img src="{{ site.Params.smalllogo | absURL }}" alt="{{ site.Title }}" {{with site.Params.smalllogo_width}}width="{{.}}"{{end}}> {{ else }} {{ site.Title }} {{ end }}</a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation"
         aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
